<resources>
    <string name="app_name">Si Diary Ku</string>
    <string name="splash_screen">splash screen</string>
    <string name="memory">Memory</string>
    <string name="new_thought">New thought</string>
    <string name="profile">Profile</string>
    <string name="create_just_your">Create just your</string>
    <string name="memories">memories</string>
    <string name="memories_title">Memories</string>
    <string name="what_made_you_lough_today">What made you lough today?</string>
    <string name="write">Write</string>
    <string name="write_diary_image">write diary image</string>
    <string name="login">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password">Forgot password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="logout">Sign Out</string>
    <string name="profile_image">Profile Image</string>
    <string name="log_out_of_current_account">Log out of current account</string>
    <string name="sign_out">Sign out</string>
    <string name="change_password">Change Password</string>
    <string name="change_your_current_password">Change your current password</string>
    <string name="change_name_and_note">Change name and note</string>
    <string name="account">Account</string>
    <string name="account_image">account image</string>
    <string name="change_password_image">Change password image</string>
    <string name="sign_out_image">Sign out image</string>
    <string name="we_hope_you_always_happy">We hope you always happy</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="please_wait">Please wait…</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="message_success_account">Change name or password are success</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="repeat_password_is_empty">Repeat password is empty</string>
    <string name="name_is_empty">Name is empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_and_repeat_password_is_not_same">Password and Repeat Password is not same</string>
    <string name="password_at_least_has_six_character">Password at least has 6 length of character</string>
    <string name="sign_up_account_is_success">Sign up account is success</string>
    <string name="sign_in_is_success">Sign in is success</string>
    <string name="old_password_is_empty">Old password is empty</string>
    <string name="new_password_is_empty">New password is empty</string>
    <string name="invalid_old_password">Invalid old password</string>
    <string name="new_password_and_repeat_password_is_not_same">New password and Repeat Password is not same</string>
    <string name="new_password_at_least_has_six_character">New password at least has 6 length of character</string>
    <string name="change_password_is_success">Change password is success</string>
    <string name="clear_your_mind">Clear your mind</string>
    <string name="back_image">back image</string>
    <string name="search_image">search image</string>
    <string name="what_happened_today">What happened today?</string>
    <string name="type_to_write">Type to write</string>
    <string name="characters_left">characters left</string>
    <string name="upload_a_picture">Upload a picture</string>
    <string name="pick_a_location">Pick a location</string>
    <string name="add_tags">Add tags</string>
    <string name="picture_new_diary_image">picture new diary image</string>
    <string name="add_new_tag">Add new tag</string>
    <string name="new_tag">New tag</string>
    <string name="login_image">Sign in image</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">North Jakarta</string>
    <string name="default_info_snippet">Warakas, North Jakarta</string>
    <string name="your_current_location">Your current location</string>
    <string name="pick_location">Pick location</string>
    <string name="maps">Maps</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="tag_already_exists">Tag already exists</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="tag">Tag</string>
    <string name="new_diary">New Diary</string>
    <string name="diary_must_be_filled">Diary must be filled</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="upload_file">Upload file</string>
    <string name="all_memories">All memories</string>
    <string name="on_this_day">On this day</string>
    <string name="memory_not_available">Memory not available</string>
    <string name="update_memory">Update Memory</string>
    <string name="delete_memory">Delete Memory</string>
    <string name="share_memory">Share Memory</string>
    <string name="search_memories">Search memories...</string>
    <string name="search_memory">Search Memories</string>
    <string name="your_diary">Your diary </string>
    <string name="see_you_photo_diary_here">See you photo diary in here:</string>
    <string name="share_via">Share via</string>
</resources>