<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:context=".ui.fragment.diary.DiaryFragment">

            <LinearLayout
                android:id="@+id/diary_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/create_just_your"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/memories"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/desc_diary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/what_made_you_lough_today"
                app:layout_constraintTop_toBottomOf="@id/diary_title_layout" />

            <ImageView
                android:id="@+id/diary_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="36dp"
                android:contentDescription="@string/write_diary_image"
                android:src="@drawable/write_diary"
                app:layout_constraintTop_toBottomOf="@id/desc_diary_text" />

            <Button
                android:id="@+id/write_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/write"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/diary_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>