<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="id.ac.astra.polman.sidiaryku.ui.fragment.new_diary.NewDiaryViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.new_diary.NewDiaryFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/back_new_diary_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/back_image"
                android:focusable="true"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_new_diary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:letterSpacing="0.03"
                android:text="@string/clear_your_mind"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/back_new_diary_image" />

            <LinearLayout
                android:id="@+id/greeting_new_diary_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="16dp"
                android:background="@color/gray"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@id/title_new_diary_text">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/what_happened_today"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/picture_new_diary_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/picture_new_diary_image"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/greeting_new_diary_layout"
                tools:src="@drawable/profile" />

            <TextView
                android:id="@+id/address_new_diary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:gravity="right"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/picture_new_diary_image"
                tools:ignore="RtlHardcoded"
                tools:text="location: Jakarta" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type_write_new_diary_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:nestedScrollingEnabled="true"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintTop_toBottomOf="@id/address_new_diary_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/type_write_new_diary_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/type_to_write"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="200"
                    android:maxLines="5"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/length_character_new_diary_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:layout_constraintTop_toBottomOf="@id/type_write_new_diary_layout">

                <TextView
                    android:id="@+id/length_character_new_diary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/characters_left" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/action_new_diary_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/length_character_new_diary_layout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <Button
                    android:id="@+id/upload_picture_new_diary_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_a_picture" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <Button
                    android:id="@+id/add_tags_new_diary_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_tags" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <Button
                    android:id="@+id/pick_a_location_new_diary_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_a_location" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray" />
            </LinearLayout>

            <Button
                android:id="@+id/save_new_diary_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/action_new_diary_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
